# humanMuscleGenerator

./: App_RotatingCube.h  CMakeLists.txt  README.md  README.txt  cone_bone_anim.DAE
MuscleGenerator/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  scenecontroller.cpp  scenecontroller.h  shadercontroller.cpp  shadercontroller.h  vertexbufferobject.cpp  vertexbufferobject.h
code/: AnimationManipulator.cpp  AnimationManipulator.h  Bone.cpp  Bone.h  BoneAnimation.cpp  BoneAnimation.h  CameraManipulator.cpp  CameraManipulator.h  Element.h  GLManipulator.cpp  GLManipulator.h  MeshManipulator.cpp  MeshManipulator.h  ShaderManipulator.cpp  ShaderManipulator.h  XMLFileManipulator.cpp  XMLFileManipulator.h  diplomovka.vcxproj  diplomovka.vcxproj.filters  main.cpp
glsl/: fragment.fs  tesselation_shader.tcs  tesselation_shader.tes  vertex.vs
glsl/old/: tesselation_shader.tcs  tesselation_shader.tes  test_geometry.gs  vertex_shader.vs
models/: plane.3DS
oldOld/: CMakeLists.txt  glapllet.cpp  glapllet.h  glwidget.cpp  glwidget.h  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  secondwindow.cpp  secondwindow.h
oldOld/glsl/: fragment_shader.fs  tesselation_shader.tcs  tesselation_shader.tes  vertex_shader.vs
oldOld/glsl/old/: fragment_shader.fs  myFirst.fs  myFirst.vs
oldOld/images/: test.tif  test_vdm.tif
oldOld/models/: human.3DS  plane2.3DS
oldOld/old/: main.cpp
